--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 #container {
-  margin: 200px;
+  margin: 150px;
 
  
 }
 
 body {
-  background-color: grey;
+  background-color: light grey;
 }
 
 #other {
