--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 #container {
   margin: 150px;
+  padding: 10px 150px 10px 150;
 
  
 }
 
 body {
-  background-color: light grey;
+  background-color: lightgrey;
 }
 
 #other {
