--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 #container {
-  margin-top: 150px;
-  margin-left:200px;
-  margin-right:200px;
-  margin-bottom: 150;
+  margin: 150px;
+ 
   
  
 }
