--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@
   margin-left: 200px;
   margin-right: 200px;
   margin-bottom: 30px;
- 
   
- 
 }
 
 #education {
- margin-bottom: 10px; 
+ margin-bottom: 10px;
+ line-height: 1.5em; 
 }
 
 #organization {
