--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@
   
 }
 
+h4 {
+    line-height: 25px;
+}
+
+h3 {
+    line-height: 25px;
+}
+
+h2 {
+    line-height: 25px;
+}
+
 .profile-quote {
  padding-right: 15em; 
 }
