--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ h2 {
 .profile-image {
 float: right;
 display: inline-block; 
-margin-top: 1em;  
+margin-top: 1em; 
+height: 12em
 }
 
 .image-container {
